v1.9.0 / versioncode 32
- Add donation button
- Build improvements
- Add workaround for dependency version check
- Update dependencies
- Refactors & cleanups
- Add unit tests
- Add instrumented test, update wrapper
- Convert to nav graph
- Add Hilt DI
- Change from webp/png to vector
- Update dimensions
- Update screenshots
- Treat lint warnings as errors
- Treat compiler warnings as errors
- Make disclaimer more brief
- Update disclaimer font sizes
- Add burn-in mitigation for disclaimer
- Update disclaimer margins for non-tv
- Add color affordance for button focus
- Don't autofocus on app load, release focus when content updated
- Enhance anti-burnin for clock view