@@ -5,24 +5,26 @@ plugins {
     alias(libs.plugins.kotlin.android)
     alias(libs.plugins.kotlin.compose)
     alias(libs.plugins.gradle.versions.plugin)
+    alias(libs.plugins.hilt.android)
+    alias(libs.plugins.ksp)
 }
 
 android {
     namespace = "com.dermochelys.utcclock"
     compileSdk = 36
+    buildToolsVersion = "36.0.0"
 
     defaultConfig {
         applicationId = "com.dermochelys.utcclock"
         minSdk = 21
         targetSdk = 36
-        versionCode = 14
-        versionName = "1.8"
+        versionCode = 32
+        versionName = "1.9.0+32"
 
-        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
+        // 2025-07-15 Specify NDK version as workaround: https://issuetracker.google.com/issues/237187538
+        ndkVersion = "28.2.13676358"
 
-        ndk {
-            debugSymbolLevel = "FULL"
-        }
+        testInstrumentationRunner = "com.dermochelys.utcclock.HiltTestRunner"
     }
 
     buildTypes {
@@ -46,6 +48,10 @@ android {
         targetCompatibility = JavaVersion.VERSION_21
     }
 
+    tasks.withType<JavaCompile> {
+        options.compilerArgs.add("-Werror")
+    }
+
     kotlin {
         jvmToolchain {
             languageVersion.set(JavaLanguageVersion.of(21))
@@ -61,6 +67,37 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion = "1.5.15"
     }
+
+    externalNativeBuild {
+        cmake {
+            version = "4.0.2"
+        }
+    }
+
+    testOptions {
+        unitTests.isReturnDefaultValues = true
+    }
+
+    packaging {
+        resources.excludes.addAll(
+            listOf(
+                "META-INF/LICENSE.md",
+                "META-INF/LICENSE-notice.md",
+            )
+        )
+    }
+
+    hilt {
+        enableAggregatingTask = true
+    }
+
+    lint {
+        warningsAsErrors = true
+
+        // This is needed when a new Kotlin version is out but the corresponding KSP version is not
+        disable += "NewerVersionAvailable"
+        disable += "GradleDependency"
+    }
 }
 
 dependencies {
@@ -69,31 +106,42 @@ dependencies {
     implementation(platform(libs.androidx.compose.bom))
 
     implementation(libs.androidx.activity.compose)
-
+    implementation(libs.androidx.appcompat)
     implementation(libs.androidx.compose.ui)
-    //implementation(libs.androidx.compose.ui.graphics)
     implementation(libs.androidx.compose.ui.foundation)
     implementation(libs.androidx.compose.ui.tooling)
     implementation(libs.androidx.compose.ui.tooling.preview)
     implementation(libs.androidx.compose.material3)
-
-    implementation(libs.androidx.appcompat)
-    implementation(libs.androidx.constraintlayout)
     implementation(libs.androidx.core)
     implementation(libs.androidx.core.ktx)
+    implementation(libs.androidx.datastore.preferences)
     implementation(libs.androidx.lifecycle.viewmodel)
     implementation(libs.androidx.lifecycle.runtime)
     implementation(libs.androidx.navigation.fragment.ktx)
     implementation(libs.androidx.navigation.ui.ktx)
     implementation(libs.androidx.tv.material)
     implementation(libs.androidx.tv.foundation)
-
     implementation(libs.material)
+    implementation(libs.androidx.legacy.support.v4)
+    implementation(libs.androidx.lifecycle.livedata.ktx)
+    implementation(libs.androidx.fragment.ktx)
+
+    implementation(libs.hilt.android)
+    ksp(libs.hilt.compiler)
 
     testImplementation(libs.junit)
+    testImplementation(libs.mockk)
+    testImplementation(libs.kotlinx.coroutines.test)
+    testImplementation(kotlin("test"))
+    testImplementation(libs.hilt.android.testing)
+    kspTest(libs.hilt.android.compiler)
 
+    androidTestImplementation(libs.mockk.android)
     androidTestImplementation(libs.androidx.junit)
     androidTestImplementation(libs.androidx.espresso.core)
+    androidTestImplementation(libs.kotlinx.coroutines.test)
+    androidTestImplementation(libs.hilt.android.testing)
+    kspAndroidTest(libs.hilt.android.compiler)
 }
 
 fun isNonStable(version: String): Boolean {
@@ -108,4 +156,8 @@ tasks.withType<DependencyUpdatesTask> {
   rejectVersionIf {
     isNonStable(candidate.version) && !isNonStable(currentVersion)
   }
+}
+
+tasks.withType<Test> {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
